# Skin_Cancer_Detection_HAM10000

./: .gitignore  README.md  data_exploration.ipynb  data_utils.py  pyproject.toml
exp_tools/: __init__.py  aug_data.py  basic_utils.py  data_utils.py  loggers.py  metrics.py  trainer.py
exp_tools/modules/: soft_attention.py  vgg_layers.py
exp_tools/training/: __init__.py  dist_trainer.py  trainer.py
notebooks/: Classification_with_Weighted_Sampling.ipynb  Data_Augmentation2.ipynb  Detection_with_Augmentation.ipynb  Detection_with_VGG.ipynb  Detection_with_VGG_Augmentation2.ipynb  basic_model.ipynb  data_exploration.ipynb
